# sny-copyright-checker

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  EXAMPLES.md  GIT_AWARE_YEAR_MANAGEMENT.md  HIERARCHICAL_TEMPLATES.md  INIT_WIZARD.md  INIT_WIZARD_IMPLEMENTATION.md  LICENSE  PRECOMMIT_AUTOMATION_SUMMARY.md  PRE_RELEASE_CHECKLIST.md  PROJECT_SETUP_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_SUMMARY.md  REPLACE_FEATURE.md  REPLACE_FEATURE_DEMO.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_GAPS_AND_BUGS.md  VERSION_MANAGEMENT.md  copyright.txt  demo.py  demo_changed.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_crlf.py  test_duplicate.py  test_lf.py  test_per_file.py
.github/workflows/: code-quality.yaml  test.yml
demo/: demo.py  demo_changed.py  demo_init_wizard.py  demo_precommit_automation.py  demo_project_years.py
scripts/: __init__.py  copyright_checker.py  copyright_template_parser.py  init_wizard.py  main.py
tests/: __init__.py  test_business_unit_logic.py  test_cli_argument_order.py  test_copyright_checker.py  test_copyright_in_code.py  test_crlf.py  test_duplicate_detection.py  test_git_aware_years.py  test_hierarchical.py  test_ignore_files.py  test_init_wizard.py  test_integration.py  test_lf.py  test_precommit_update.py  test_project_years.py  test_replace_feature.py  test_string_detection.py  test_string_detection_fixed.py  test_string_literal_detection.py  test_template_parser.py  test_trace_state.py
