[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sny-copyright-checker"
version = "1.0.0"
description = "Pre-commit hook to check and auto-add copyright notices with multi-format and regex support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SNY Group Corporation"}
]
keywords = ["pre-commit", "copyright", "license", "sny"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
sny-copyright-checker = "scripts.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/sny-copyright-checker"
Repository = "https://github.com/yourusername/sny-copyright-checker"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["*.py"]
